fixing-conflicts-in-css

--- a/index.html
+++ b/index.html
@@ -116,20 +116,9 @@
           <p class="testemony-info">
             “The amazing organizers and <br />volunteer coaches at HTF
             <br />gave me the knowledge, <br />experience and confidence
-            <br />to embark on a new career <br />in tech. Both training (web
-            <br />dev and. Net) where <br />fundamental to <br />my success.<br />
-            <a href="#" id="readMore"> Read more </a>
-
-            <script>
-              var content = document.getElementById("content");
-              var readMore = document.getElementById("readMore");
-
-              readMore.addEventListener("click", function (event) {
-                content.innerHTML +=
-                  " Donec aliquet volutpat sapien ut convallis.";
-                event.preventDefault();
-              });
-            </script>
+            <br />to embark on a new career <br />in tech. <br />Both training
+            (web <br />dev and. Net) where <br />fundamental to <br />my
+            success.
           </p>
 
           <img
