--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./client/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>project!</title>
-
+    <title>Hack your future | hack your future belgium</title>
     <link href="./styles/index.css" rel="stylesheet" />
   </head>
 
@@ -247,6 +246,62 @@
               alt="apptweak"
             />
           </a>
+        </div>
+      </div>
+    </div>
+    <div class="newsletter">
+      <form class="news-form">
+        <div class="form-group">
+          <label>First name</label>
+          <input type="text" name="first name" placeholder="First name" />
+        </div>
+        <div class="form-group">
+          <label>Last name</label>
+          <input type="text" name="last name" placeholder="Last name" />
+        </div>
+        <div class="form-group">
+          <label>Email*</label>
+          <input type="text" placeholder="Email" name="email" />
+        </div>
+        <div class="signup">
+          <button type="submit">Sign Up</button>
+        </div>
+      </form>
+    </div>
+    <div class="contact">
+      <div class="contact-container">
+        <div class="contact-form">
+          <h2>Contact Us</h2>
+          <form id="contact" action="#" method="POST">
+            <label for="name">First Name:</label><br />
+            <input type="text" id="name" name="first-name" /><br />
+            <label for="name">Last Name:</label><br />
+            <input type="text" id="last-name" name="last-name" /><br />
+            <label for="email">Email:</label><br />
+            <input type="email" id="email" name="email" /><br />
+            <label for="message">Message:</label><br />
+            <textarea id="message" name="message" rows="4" cols="50"></textarea
+            ><br />
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        <div class="map">
+          <h2>Our Location</h2>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2515.296054158547!2d4.406087915699197!3d50.83802967953232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47fd1d960c1%3A0xaf49337d11f9b097!2sHackYourFuture%20Belgium!5e0!3m2!1sen!2sbe!4v1644923598195!5m2!1sen!2sbe"
+            width="600"
+            height="450"
+            title="HackYourFuture Belgium Location"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+          <p>
+            <a
+              class="maps"
+              href="https://www.google.com/maps/place/HackYourFuture+Belgium/@50.8380297,4.4060879,17z/data=!3m1!4b1!4m6!3m5!1s0x47c3c47fd1d960c1:0xaf49337d11f9b097!8m2!3d50.8380263!4d4.4086628!16s%2Fg%2F11hbvt8cyh?entry=ttu"
+              >View on Google Maps</a
+            >
+          </p>
         </div>
       </div>
     </div>
