--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        var video = document.getElementById("myVideo");
+        const video = document.getElementById("myVideo");
         video.play();
       });
     </script>
