--- a/index.html
+++ b/index.html
@@ -42,6 +42,65 @@
         video.play();
       });
     </script>
+
+    <!--Stats-->
+    <div class="stats-container">
+      <h1 class="stats1">+350</h1>
+      <h1 class="stats2">70%</h1>
+      <h1 class="stats3">+40%</h1>
+    </div>
+    <div class="stats-info">
+      <p class="stats-info1">
+        Students graduated since HackYourFuture Belgium was launched in 2018
+      </p>
+      <p class="stats-info2">
+        Of our graduates find an internship, a job or start advanced studies.
+      </p>
+      <p class="stats-info3">Women represent over 40% of our students.</p>
+    </div>
+
+    <!--Who we are-->
+
+    <div class="wwa-container">
+      <h2 class="wwa-title">WHO WE ARE</h2>
+
+      <div class="wwa1">
+        <div class="wwa-item">
+          <img class="wwa-1" src="./img/wwa1.webp" alt="who_we_are1" />
+          <p class="wwa-info">
+            <em> Who we are </em> <br />
+            <br />
+            HackYourFuture is a not-for-profit coding school for people with
+            limited access to education and the labor market. The majority of
+            our students worldwide are refugees.
+          </p>
+        </div>
+      </div>
+      <div class="wwa2">
+        <div class="wwa-item">
+          <img class="wwa-2" src="./img/wwa2.webp" alt="who_we_are2" />
+          <p class="wwa-info">
+            <em> The program </em> <br />
+            <br />
+            We believe in a world in which education and quality jobs are
+            accessible for all. This is why we have designed a free 34 week
+            program for refugees and newcomers.
+          </p>
+        </div>
+      </div>
+      <div class="wwa3">
+        <div class="wwa-item">
+          <img class="wwa-3" src="./img/wwa3.webp" alt="who_we_are3" />
+          <p class="wwa-info">
+            <em> The goal </em> <br /><br />
+            After the program we support our students in finding high quality
+            jobs. Our success criteria is not graduation from the course but
+            employment in the tech industry.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <div class="partners-conteiners">
       <h1 class="partners-title">SOME OF OUR PARTNERS</h1>
 
