--- a/index.html
+++ b/index.html
@@ -398,4 +398,28 @@
       </div>
     </div>
   </body>
+
+  <footer>
+    <div class="adress">
+      <p>Avenue de Tervueren 142<br />1150 Bruxelles<br />info@hyfbe.be</p>
+    </div>
+    <br />
+    <div class="social-media-links">
+      <a class="link" href="https://www.instagram.com/">
+        <img class="img-logo" src="./img/logoinsta.jpg" alt="instagram" />
+      </a>
+
+      <a class="link" href="https://github.com/">
+        <img class="img-logo" src="./img/logodogithub.png" alt="github" />
+      </a>
+
+      <a class="link" href="https://www.linkedin.com/">
+        <img class="img-logo" src="./img/logolinkedin.png" alt="linkedin" />
+      </a>
+
+      <a class="link" href="https://www.youtube.com/">
+        <img class="img-logo" src="./img/logodoyoutube.jpg" alt="Youtube" />
+      </a>
+    </div>
+  </footer>
 </html>
